galley/pkg/config/testing/data/builtin/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio-injection: disabled
  name: somens
spec:
  finalizers:
    - kubernetes
status:
  phase: Active
