galley/pkg/config/testing/data/builtin/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: secured-ingress
  annotations:
    kubernetes.io/ingress.class: "istio"
spec:
  tls:
    - secretName: istio-ingress-certs
  rules:
    - http:
        paths:
          - path: /http
            backend:
              serviceName: a
              servicePort: http
          - path: /pasta
            backend:
              serviceName: b
              servicePort: 8080
          - path: /.*
            backend:
              serviceName: a
              servicePort: grpc
